--- a/scss/templates/_header.scss
+++ b/scss/templates/_header.scss
@@ -10,7 +10,7 @@
     li {
         padding: 8px;
          a{
-            color: #66a2dd;
+            color: #0f0e3b;
         }
     }
 }
@@ -35,7 +35,7 @@
 
 .icon-block {
     margin-right: 20px;
-    color:#66a2dd;
+    color:#0f0e3b;
     font-size: 40px;
     line-height: 20px;
     font-weight: 400;
