--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,139 @@ Version      : 1.0
 * 12.FOOTER CSS STYLE
 * ----------------------------------------
 */
+
+/*
+    code by Iatek LLC 2018 - CC 2.0 License - Attribution required
+    code customized by Azmind.com
+*/
+@media (min-width: 768px) and (max-width: 991px) {
+  /* Show 4th slide on md if col-md-4*/
+  .carousel-inner .active.col-md-4.carousel-item + .carousel-item + .carousel-item + .carousel-item {
+      position: absolute;
+      top: 0;
+      right: -33.3333%;  /*change this with javascript in the future*/
+      z-index: -1;
+      display: block;
+      visibility: visible;
+  }
+}
+@media (min-width: 576px) and (max-width: 768px) {
+  /* Show 3rd slide on sm if col-sm-6*/
+  .carousel-inner .active.col-sm-6.carousel-item + .carousel-item + .carousel-item {
+      position: absolute;
+      top: 0;
+      right: -50%;  /*change this with javascript in the future*/
+      z-index: -1;
+      display: block;
+      visibility: visible;
+  }
+}
+@media (min-width: 576px) {
+  .carousel-item {
+      margin-right: 0;
+  }
+  /* show 2 items */
+  .carousel-inner .active + .carousel-item {
+      display: block;
+  }
+  .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
+  .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item {
+      transition: none;
+  }
+  .carousel-inner .carousel-item-next {
+      position: relative;
+      transform: translate3d(0, 0, 0);
+  }
+  /* left or forward direction */
+  .active.carousel-item-left + .carousel-item-next.carousel-item-left,
+  .carousel-item-next.carousel-item-left + .carousel-item,
+  .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item {
+      position: relative;
+      transform: translate3d(-100%, 0, 0);
+      visibility: visible;
+  }
+  /* farthest right hidden item must be also positioned for animations */
+  .carousel-inner .carousel-item-prev.carousel-item-right {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      display: block;
+      visibility: visible;
+  }
+  /* right or prev direction */
+  .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
+  .carousel-item-prev.carousel-item-right + .carousel-item,
+  .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item {
+      position: relative;
+      transform: translate3d(100%, 0, 0);
+      visibility: visible;
+      display: block;
+      visibility: visible;
+  }
+}
+/* MD */
+@media (min-width: 768px) {
+  /* show 3rd of 3 item slide */
+  .carousel-inner .active + .carousel-item + .carousel-item {
+      display: block;
+  }
+  .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
+      transition: none;
+  }
+  .carousel-inner .carousel-item-next {
+      position: relative;
+      transform: translate3d(0, 0, 0);
+  }
+  /* left or forward direction */
+  .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
+      position: relative;
+      transform: translate3d(-100%, 0, 0);
+      visibility: visible;
+  }
+  /* right or prev direction */
+  .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
+      position: relative;
+      transform: translate3d(100%, 0, 0);
+      visibility: visible;
+      display: block;
+      visibility: visible;
+  }
+}
+/* LG */
+@media (min-width: 991px) {
+  /* show 4th item */
+  .carousel-inner .active + .carousel-item + .carousel-item + .carousel-item {
+      display: block;
+  }
+  .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item + .carousel-item {
+      transition: none;
+  }
+  /* Show 5th slide on lg if col-lg-3 */
+  .carousel-inner .active.col-lg-3.carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+      position: absolute;
+      top: 0;
+      right: -25%;  /*change this with javascript in the future*/
+      z-index: -1;
+      display: block;
+      visibility: visible;
+  }
+  /* left or forward direction */
+  .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+      position: relative;
+      transform: translate3d(-100%, 0, 0);
+      visibility: visible;
+  }
+  /* right or prev direction //t - previous slide direction last item animation fix */
+  .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+      position: relative;
+      transform: translate3d(100%, 0, 0);
+      visibility: visible;
+      display: block;
+      visibility: visible;
+  }
+}
+
 @import url("https://fonts.googleapis.com/css?family=Muli:300,400,500,700,900");
 html {
   font-family: sans-serif;
@@ -224,8 +357,8 @@ img {
 }
 
 .bg-primary, .btn-primary, .btn-white:hover {
-  background: #66a2dd!important;
-  border-color: #66a2dd!important;
+  background: #0f0e3b!important;
+  border-color: #0f0e3b!important;
   color: #fff;
 }
 
@@ -277,11 +410,11 @@ img {
 }
 
 .bg-primary {
-  background: #66a2dd!important;
+  background: #0f0e3b!important;
 }
 
 a {
-  color: #66a2dd;
+  color: #0f0e3b;
 }
 
 a:hover, a:focus {
@@ -302,7 +435,7 @@ a:hover, a:focus {
 }
 
 .header-socials li a {
-  color: #66a2dd;
+  color: #0f0e3b;
 }
 
 /*-----------------
@@ -322,7 +455,7 @@ a:hover, a:focus {
 
 .icon-block {
   margin-right: 20px;
-  color: #66a2dd;
+  color: #0f0e3b;
   font-size: 40px;
   line-height: 20px;
   font-weight: 400;
@@ -346,7 +479,7 @@ a:hover, a:focus {
  HOME-3
 ---------------------------*/
 .header-white {
-  background: #66a2dd;
+  background: #0f0e3b;
   box-shadow: 0 7px 22px rgba(0, 0, 0, 0.08);
   border-radius: 0px;
 }
@@ -525,6 +658,7 @@ PAGE BANNER
 .navbar-nav .nav-link {
   padding-right: 1rem !important;
   padding-left: 1rem !important;
+  text-align: center;
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -532,6 +666,7 @@ PAGE BANNER
   font-weight: 700;
   letter-spacing: .5px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .rounded-radius {
@@ -541,6 +676,7 @@ PAGE BANNER
 .navbar {
   position: relative;
   padding: 1rem 1rem;
+  text-align: center;
 }
 
 .navbar:before {
@@ -647,7 +783,7 @@ PAGE BANNER
 .dropdown-item:hover {
   color: #fff;
   text-decoration: none;
-  background-color: #66a2dd;
+  background-color: #0f0e3b;
 }
 
 /*----------------------
@@ -689,13 +825,13 @@ PAGE BANNER
 }
 
 .banner-content p {
-  color: #000000;
+  color: #0f0e3b;
   padding-right: 80px;
   margin-bottom: 30px !important;
 }
 
 .banner-content .display-4 {
-  color: #000000;
+  color: #0f0e3b;
   font-weight: 600;
 }
 
@@ -740,7 +876,7 @@ PAGE BANNER
   position: absolute;
   content: "";
   top: -27px;
-  background-color: #66a2dd;
+  background-color: #0f0e3b;
   opacity: .3;
   width: 80px;
   right: 70px;
@@ -765,7 +901,7 @@ ABOUT-2
 }
 
 #about .img-block img {
-  border: 5px solid #66a2dd;
+  border: 5px solid #0f0e3b;
 }
 
 .pt-6 {
@@ -780,7 +916,7 @@ ABOUT-2
  SERVICE
 -----------------------*/
 h5.subtitle {
-  color: #66a2dd;
+  color: #0f0e3b;
   margin-bottom: 10px;
   font-weight: 300;
 }
@@ -811,7 +947,7 @@ h5.subtitle {
   font-size: 25px;
   width: 50px;
   height: 50px;
-  background: #66a2dd;
+  background: #0f0e3b;
   text-align: center;
   border-radius: 50%;
   padding-top: 5px;
@@ -875,7 +1011,7 @@ h5.subtitle {
 }
 
 .web-service-block:hover i {
-  color: #66a2dd;
+  color: #0f0e3b;
 }
 
 .web-service-block:hover h3 {
@@ -957,7 +1093,7 @@ h5.subtitle {
 }
 
 .project-content-block h4 {
-  color: #66a2dd;
+  color: #0f0e3b;
 }
 
 .project-content-block p {
@@ -995,7 +1131,7 @@ h5.subtitle {
   position: absolute;
   left: 30px;
   top: -23px;
-  background: #66a2dd;
+  background: #0f0e3b;
   color: #fff;
 }
 
@@ -1109,7 +1245,7 @@ h5.subtitle {
   font-family: "Font Awesome 5 Free";
   left: 0px;
   top: 5px;
-  color: #66a2dd;
+  color: #0f0e3b;
   font-weight: 900;
 }
 
@@ -1195,7 +1331,7 @@ PRICING-2
 }
 
 .blog-content:hover a h3 {
-  color: #66a2dd;
+  color: #0f0e3b;
 }
 
 .blog-content h6 span {
@@ -1212,7 +1348,7 @@ SECTION TESTIMONIAL
 -------------------------------------*/
 #section-testimonial {
   padding-bottom: 120px;
-  background: #F9FAFF;
+  background: #ffffff;
 }
 
 .mb25 {
@@ -1292,11 +1428,11 @@ CONTACT PAGE
   font-size: 40px;
   margin-bottom: 20px;
   display: block;
-  color: #66a2dd;
+  color: #0f0e3b;
 }
 
 .form-control:focus, .form-control:hover {
-  border-color: #66a2dd;
+  border-color: #0f0e3b;
   box-shadow: none;
 }
 
@@ -1376,7 +1512,7 @@ CONTACT PAGE
 }
 
 .current-year {
-  color: #66a2dd!important;
+  color: #0f0e3b!important;
 }
 
 /*-----------------------------
@@ -1388,7 +1524,7 @@ CONTACT PAGE
   right: 30px;
   bottom: 50px;
   z-index: 999;
-  background: #66a2dd;
+  background: #0f0e3b;
   color: #fff !important;
   border-radius: 100%;
   opacity: 0;
@@ -1650,7 +1786,8 @@ CONTACT PAGE
   }
   .navbar-collapse.collapse.show {
     padding-bottom: 30px;
-    background: #66a2dd;
+    background: #0f0e3b;
+    text-align: center;
   }
   .map {
     margin-top: 40px;
@@ -1682,7 +1819,8 @@ CONTACT PAGE
   }
   .navbar-collapse.collapse.show {
     padding-bottom: 30px;
-    background: #66a2dd;
+    background: #0f0e3b;
+    text-align: center;
   }
   .top-info-block {
     text-align: center;
@@ -1905,7 +2043,8 @@ CONTACT PAGE
   }
   .navbar-collapse.collapse.show {
     padding-bottom: 30px;
-    background: #66a2dd;
+    background: #0f0e3b;
+    text-align: center;
   }
   .web-service-block {
     margin-bottom: 30px;
